--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
     "axios": "^1.7.7",
+    "framer-motion": "^11.5.5",
     "next": "14.2.13",
     "prettier": "^3.3.3",
     "react": "^18",
